update all references, clear git cache, build and gitignore